--- a/src/index.css
+++ b/src/index.css
@@ -100,3 +100,8 @@ button{
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     font-family: sans-serif;
   }
+
+  .created {
+    background-color: white;
+    border-radius: 12px;
+  }
